# ColorVideoVDP

./: .gitignore  ChangeLog.md  LICENSE  README.md  generate_timings.py  metrics.md  publish_release.md  pyproject.toml  requirements.txt  setup.py  test_on_LIVEHDR.py  test_on_XR-DAVID.py  test_on_local_file.py
calibration/: README.md  data.py  extract_features.py  livehdr.csv  nerf.csv  train.py  xr-david.csv
docs/: result_detailed.md
examples/: ex_adaptive_chroma_subsampling.py  ex_aliasing.py  ex_batch_of_images.py  ex_blur_over_time.py  ex_chk_tensor_gaussian_blur.py  ex_chroma_subsampling.py  ex_compare_noisy_optimization.py  ex_display_brightness.py  ex_display_geometry.py  ex_hdr_images.py  ex_image_reconstruction.py  ex_image_reconstruction_chk_random_seed.py  ex_image_reconstruction_chk_visualize_error.py  ex_image_recovery.py  ex_luminance_only.py  ex_noise_vs_blur.py  ex_reconstruction_chk.py  ex_simple_image.py  ex_simple_video.py  ex_utils.py  test_profiler.py
macOS/: cvvdp_per_frame_csv_and_heatmap_v32.3.py
matlab/: README.md  cvvdp.m
pycvvdp/: __init__.py  colorspace.py  csf.py  cvvdp_metric.py  cvvdp_ml_metric.py  cvvdp_ncsf_mtf_metric.py  cvvdp_nn_metric.py  cvvdp_rnn_metric.py  de2000.py  de2000_spatial.py  display_model.py  dm_preview.py  dm_preview_metric.py  dolby_ictcp.py  dump_channels.py  e_itp.py  e_sitp.py  flip.py  fvvdp_display_model.py  fvvdp_lpyr_dec.py  hyab.py  interp.py  lpyr_dec.py  psnr_metric.py  pu_lpips.py  pu_vmaf.py  pupsnr.py  run_cvvdp.py  run_fvvdp.py  ssim_metric.py  utils.py  video_source.py  video_source_file.py  (+4 more)
(+52 files in other folders)
