[project]
name = "cvvdp"
version = "0.5.1"
description = "PyTorch code for 'ColorVideoVDP': a full-reference visual quality metric that predicts the perceptual difference between pairs of images or videos."
readme = "README.md"
license = "MIT"
maintainers = [
  { name="Rafał Mantiuk", email="mantiuk@gmail.com" },
]
requires-python = ">=3.8"
classifiers = [
   "Development Status :: 3 - Alpha",
   "Intended Audience :: Science/Research",
   "Operating System :: OS Independent",
   "Programming Language :: Python :: 3.8",
   "Programming Language :: Python :: 3.9",
   "Programming Language :: Python :: 3.10",
   "Programming Language :: Python :: 3.11",
]
dependencies = [
   "numpy>=1.17.3",
   "scipy>=1.10.0",
   "ffmpeg-python>=0.2.0",
   "torch>=1.13.1",
   "torchvision>=0.9.2",
   "ffmpeg>=1.4",
   "imageio>=2.19.5",
   "matplotlib>=3.8.0",
   "huggingface_hub>=0.33.4",
   "einops>=0.8.1",
   "PyEXR>=0.3.10",
]

[project.scripts]
cvvdp = "pycvvdp.run_cvvdp:main"

[tool.setuptools]
packages = ["pycvvdp", "pycvvdp.third_party"]
include-package-data = true

[tool.setuptools.package-data]
pycvvdp = [
   "csf_cache/*.mat",
   "vvdp_data/*.json",
   "vvdp_data/README.md",
   "vvdp_data/cvvdp_ml_saliency/*.json",
   "vvdp_data/cvvdp_ml_transformer/*.json",
]

[project.urls]
Homepage = "https://github.com/gfxdisp/ColorVideoVDP"
Issues = "https://github.com/gfxdisp/ColorVideoVDP/issues"